A fix (bug #6101: mysqldump writes invalid SQL).

client/mysqldump.c:
  A fix (bug #6101: mysqldump writes invalid SQL).
  Syntax corrected.